extensionDirectory/static/filings.css
/* ... */
.count-table td:first-of-type {
  width: 33%;
}
.count-table__body .count-item {
  border-top: 1px solid #999;
  line-height: 1.2em;
}
.filing-closing {
  margin-top: 1.5rem;
}
.filing-closing.filing-closing--align-right {
  display: flex;
  justify-content: flex-end;
}
.filing-closing__signature-area {
  display: flex;
  line-height: 1.3;
}
.filing-closing__signature-box {
  border-top: 1.5px solid black;
  width: 65%;
  margin-top: 2.5rem;
  padding-top: 0.25rem;
}
.filing-closing__date-area-prose {
  margin: 2.5rem 0 0 2.5rem;
  border-top: 1.5px solid black;
  width: 25%;
}

.filing-closing__date-box {
  border-top: 1.5px solid black;
  margin-left: 35px;
  width: 25%;
  margin-top: 2.5rem;
  padding-top: 0.25rem;
}
.filing-closing__contact-box {
  margin-top: 2rem;
}
.filing-closing__phone {
  margin-top: 1rem;
}

.stipulated-closing {
  margin-top: 1.5rem;
}
p.filing-dated-city {
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}

/* Ordered Lists */

.filing-body li {
  list-style-position: inside;
  text-indent: -1em;
  }
/* Use "fill-in" for a solid underline where people need to fill in 
 * information. Use one of the cascading modifiers to get the desired width. 
 */
.fill-in {
  border-bottom: 1.5px solid #000;
  display: inline-block;
}
.fill-in.half-width {
  width: 360px;
}
.fill-in.quarter-width {
  width: 180px;
}
.fill-in.word-width {
  width: 100px;
}
.fill-in.digit-width {
  width: 40px;
}

/* CHeckout sheet */
.client-checkout-header {
  display: flex;
  flex-direction: row;
  margin-bottom: 1rem;
}

.client-checkout-header-left {
  width: 40%;
  margin-right: 10px;
}
.client-checkout-header-right {
  width: 55%;
}

.pro-se {
  outline: 2px solid black;
  font-size: 18px !important;
  padding: 3px;
}

.county-header {
  border-top: 3px solid black;
  /*border-bottom: 1px solid black;*/
  margin-bottom: 3px;
}

.atty-note-box {
  border-bottom: 1px solid black;
}

.client-text {
  width: 80% !important;
}

.summary-table td {
  padding: 3px !important;
}

.summary-table .count-row {
  counter-increment: rowNumber;
}

.summary-table .count-row td:first-child::before {
  content: counter(rowNumber);
  min-width: 1em;
  margin-right: 0.5em;
}

.footer__input {
  width: 100%;
  text-align: center;
}
.date-list {
  text-align: center;
  display: flex;
  flex-direction: row;
}

.pill {
  text-align: center;
  width: 150px;
  font-size: 0.75rem;
  font-weight: bold;
  text-transform: uppercase;
}
.pill.pill--rounded {
  border-radius: 500px;
  margin: 0;
  padding: 0;
  margin-right: 5px;
  padding: 0px 5px 0px 5px;
}

.pill.pill--outline-black {
  border: 1px solid #555;
  color: #555;
  background-color: transparent;
}

@media screen {
  body {
    margin: 0;
  }
  .page {
    max-width: 65rem;
    width: 70%;
    min-width: 50rem;
    padding: 6rem;
    height: 100%;
    border: 2px solid #ddd;
    margin-left: 19rem;
    margin-right: auto;
    margin-top: 8rem;
    position: relative;
    min-height: 50rem;
  }
  .footer,
  .footer-space {
    display: none;
  }
  .no-visible {
    display: none !important;
  }
  .page:last-of-type {
    margin-bottom: 100px;
  }
  .all-filings,
  .extra-pages {
    width: 100%;
    min-width: 70rem;
  }

  /* Styles UI Inputs */
  .page input,
  .page textarea {
    border: 1px dotted black;
    background-color: #ffb;
    padding: 0.25rem;
  }
  .count-item__textarea {
    width: 100%;
    height: 2.15rem;
    margin-bottom: -2px;
    margin-top: 3px;
  }
}

@media print {
  @page {
    size: letter portrait;
    margin: 1in 0.25in 0.75in 0.25in;
  }
  body {
    line-height: 1.3;
    color: #000;
    width: 8.5in;
  }
  .no-print {
    display: none !important;
  }
  .page {
    page-break-after: always !important;
    position: relative;
    overflow: visible;
    background: #fff;
    margin: 0;
    padding-left: 0.25in;
    padding-right: 0.25in;
  }
  .count-table + p {
    padding-top: 0.5rem;
  }
  .spacer-page {
    height: 0;
    margin-bottom: -0.25in;
  }

  .all-filings {
    width: 93%;
    border-left: 0.01in solid #000;
    border-right: 0.01in solid #000;
    margin-left: 15%;
  }
  .extra-pages {
    box-sizing: border-box;
    width: 100%;
    margin-left: 0.75in;
    margin-right: 0.75in;
    page-break-after: always;
  }

  .footer-space__vertical-spacer {
    min-height: 50px;
  }
  .footer {
    position: fixed;
    bottom: 0;
    text-align: center;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    border-bottom: 0.2in solid #fff;
    margin-bottom: -0.1in;
    height: 100px;
  }
  .footer__company {
    margin: 0;
    margin-bottom: 0.25em;
  }
  .footer__phone {
    margin: 0;
  }

  .count-table {
    page-break-inside: auto;
  }
  .count-table tr {
    page-break-inside: auto;
    page-break-after: auto;
  }
  .filing-closing {
    page-break-inside: avoid;
    page-break-after: auto;
  }
  .filing-body__response {
    page-break-inside: auto;
  }
  .filing-closing__signature-box,
  .filing-closing__date-box {
    margin-top: 0.5in;
  }

  /* Font Size Adjustments */
  body {
    font-size: 19pt;
  }
  .page,
  p,
  .page .filing-title,
  .page .header__title,
  td,
  th {
    font-size: 19pt;
  }
  .page p,
  .page h1 {
    font-size: 19pt;
  }
  .footer {
    font-size: 14pt;
    line-height: 1.2em;
    font-family: 'Times New Roman', Times, serif;
  }
}

/* cover letter */
.custom-note {
  width: 100%;
  height: auto;
}
.atty-block {
  width: 100%;
  padding-top: 15px;
}
.atty-block input,
.atty-block textarea {
  width: 100%;
}

/*manage-counts page*/
.edit-count {
  border: 1px solid #ddd;
  padding: 30px;
  border-radius: 5px;
  position: relative;
}
.edit-count__title {
  max-width: 60%;
  overflow-wrap: break-word;
}

/* MODAL SETTINGS */
.modal-body {
  display: flex;
  flex-direction: column;
  width: 100%;
}
.modal-body textarea,
.modal-body input,
.modal-body .card-header__select {
  width: 100%;
}

.modal-title {
  font-weight: bolder;
}
/* ... */

